CGIV-8253 Prevent text overflow in table headers

--- a/public/channelgrabber/products/scss/_products.scss
+++ b/public/channelgrabber/products/scss/_products.scss
@@ -137,6 +137,8 @@
                     white-space: nowrap;
                     overflow: hidden;
                     box-sizing: border-box;
+                    text-overflow: ellipsis;
+                    padding: 5px;
                     &.stock-mode-header-col {
                         width: 300px;
                     }
